Sequencer: Selecting playhead deselects all selected strips #73453

Closed
opened 2020-01-28 11:52:23 +01:00 by tintwotin · 10 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 26.20.100.7262

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-27 21:31, hash: 5df494d75c
Worked: 2.81

Short description of error
When dragging the playhead all selected strips gets deselected. Gif: VU_select.gif

Exact steps for others to reproduce the error

  • Add a couple of ex. color strips to the VSE(Shift+A).
  • Select them.
  • Drag the playhead.
  • The strips gets deselected.

In 2.81 the strips wasn't deselected, so this is a regression.

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 26.20.100.7262 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-27 21:31, hash: `5df494d75c` Worked: 2.81 **Short description of error** When dragging the playhead all selected strips gets deselected. Gif: ![VU_select.gif](https://archive.blender.org/developer/F8307306/VU_select.gif) **Exact steps for others to reproduce the error** - Add a couple of ex. color strips to the VSE(Shift+A). - Select them. - Drag the playhead. - The strips gets deselected. In 2.81 the strips wasn't deselected, so this is a regression.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

In contrast to #70457, this only seems to be an issue with Left-Click-Select?

In contrast to #70457, this only seems to be an issue with Left-Click-Select?
Member

Added subscribers: @WilliamReynish, @JulianEisel

Added subscribers: @WilliamReynish, @JulianEisel
Member
CC @WilliamReynish , @JulianEisel

Added subscriber: @iss

Added subscriber: @iss

In #73453#861798, @lichtwerk wrote:
In contrast to #70457, this only seems to be an issue with Left-Click-Select?

This is caused by 6a49161c8c, haven't looked in precise cause yet. Seems like click event is caught by select tool.

> In #73453#861798, @lichtwerk wrote: > In contrast to #70457, this only seems to be an issue with Left-Click-Select? This is caused by 6a49161c8c, haven't looked in precise cause yet. Seems like click event is caught by select tool.

This issue was referenced by e3f89237fe

This issue was referenced by e3f89237feccf710e34a9bd316e4c0557ad79055
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-01-29 16:30:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73453
No description provided.