Fix T73453: Selecting playhead in VSE deselects all selected strips

Tool system handlers had higher priority than the overlayed animation
"regions" (fake regions in fact). Give animation (and View2D) handlers
priority over toolsystem handlers.

Gizmo's still have higher priority, but I'll leave that unless there's a
reason to change.